--- a/templates/card_template.html
+++ b/templates/card_template.html
@@ -1,6 +1,8 @@
 <div class="card">
   <div class="card_img">
-    <img class="responsive_img" alt="" src="">
+    <a href="#" target="_blank">
+      <img class="responsive_img" alt="" src="./images/FILENAME">
+    </a>
   </div>
   <div class="card_text">
     <h3>Project Name</h3>
