--- a/style.css
+++ b/style.css
@@ -59,9 +59,9 @@ nav a {
 #hero {
   text-align: center;
   height: 100vh;
-  background-image: url(./images/beach2.jpg);
+  background-image: url(./images/chile.jpg);
   background-size: cover;
-  background-position: center bottom;
+  background-position: center top;
   background-repeat: no-repeat;
 }
 
