--- a/templates/card_template.html
+++ b/templates/card_template.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card_img">
     <a href="#" target="_blank">
-      <img class="responsive_img" alt="" src="./images/FILENAME">
+      <img class="responsive-img" alt="" src="./images/FILENAME">
     </a>
   </div>
   <div class="card_text">
@@ -10,8 +10,8 @@
     <hr>
     <p>short paragraph</p>
     <div class="skills">
-      <div class="skill_button">HTML</div>
-      <div class="skill_button">CSS</div>
+      <div class="skill-button">HTML</div>
+      <div class="skill-button">CSS</div>
     </div>
   </div>
 </div>
