--- a/style.css
+++ b/style.css
@@ -187,11 +187,11 @@ nav a {
   text-align: right;
 }
 
-.card_img {
+.card-img {
   flex-basis: 60%;
 }
 
-.responsive_img {
+.responsive-img {
   width: 100%;
   height: auto;
   display: block;
@@ -200,7 +200,7 @@ nav a {
   opacity: 0.95;
 }
 
-.responsive_img:hover {
+.responsive-img:hover {
   box-shadow: 0px 0px 10px grey;
   opacity: 1;
 }
@@ -232,7 +232,7 @@ nav a {
   flex-wrap: wrap;
 }
 
-.skill_button {
+.skill-button {
   margin: 0.2vw;
   background-color: #2368b5;
   color: white;
@@ -241,6 +241,14 @@ nav a {
   border-radius: 8px;
   font-size: 10px;
   font-family: 'Josefin Sans', sans-serif;
+}
+
+.demo-link {
+  text-align: center;
+  margin-bottom: 1.5vh;
+  background-color: limegreen;
+  padding: 0.5vh;
+  color: white !important;
 }
 
 #portfolio h2 {
@@ -275,7 +283,7 @@ nav a {
   justify-content: space-around;
 }
 
-#email_button {
+#email-button {
   font-size: 1.4rem;
   padding: 15px 35px;
   border-radius: 8px;
@@ -285,7 +293,7 @@ nav a {
   color: white;
 }
 
-#email_button:hover {
+#email-button:hover {
   background-color: white;
   color: black;
   cursor: pointer;
@@ -514,7 +522,7 @@ footer p {
     text-align: center;
   }
 
-  .responsive_img {
+  .responsive-img {
     text-align: center;
     display: inline-block;
     margin-bottom: 1vw;
